FE: fix 100vh on mobile

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -2,9 +2,14 @@
   font-family: "Nunito", Arial, sans-serif;
 }
 
+html {
+  height: -webkit-fill-available;
+}
+
 body {
   -webkit-font-smoothing: antialiased;
   height: -webkit-fill-available;
+  min-height: 100vh;
 }
 
 img {
